# mmft-routing-block-channel-router

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  remove.yml
benches/: README.md  benchmarks.rs  compute_group_aggregates.rs  generate_benchmark.rs  generate_benchmarks.rs  print_benchmark.rs  print_benchmarks.rs  valid_benchmarks.rs
benches/cases/: aggregate.json
benches/cases/01_30x15_10_0.4_R/: -dBlEjv5oAM7ZgJ5Tr_nT.json  -om4hmASWn_3fkGj8ZWhN.json  0GJT1P8pFC28kvdHLYwJ3.json  0NCBuWXmgeqYOc4CmN2WZ.json  0NosgtX8aWJQt5EV523Mc.json  0lmNk9Vx_U-8NKme6tBWR.json  0m9yIdAFuX-8FlLCV9UpF.json  0scyyjw30LWaitKA60Lsn.json  0zIV4fhN31zKHVeChPlYy.json  15QmV18xOLzFU77ZTR-I7.json  1_V-ffdltEbJSJvRqLYKS.json  1mdoo85rygXy4fsF5g2ic.json  1wqtChPm2e2vuy6ZhaY2M.json  27Edb-ABQk8Dc4Rs-Fc_t.json  2CWXFy-fiLq2p2dU-H3_u.json  2JmHAvzK_bpJm5JwxgcBG.json  2PgLQAMWn2GBOg5t70H9H.json  2ZKUoVAX573wT2k3nUn2W.json  2_tF1aU8g4rt433Cnnftt.json  2ajoiJr2WxcDv5I1qyqSD.json  2g1nqYdnxaeJLdV1l5E4b.json  2pRCYNXIkxERr15NJdUd2.json  3AvUGPYaX5jYaM-GPPZBS.json  3BuFCcY8s8PQAl8JLr2ry.json  3CMxttS8PavhQQMrFfHm1.json  3WZ18hen-Kp74DCVjX-qx.json  4bqkoorVm70jhQ0lXJfQx.json  4nxOZZ7BNlURGI7suxCDE.json  55lELNmTZ2uvGcwK0lfLV.json  5BQYrPhOMBT0mVmDPF3Ay.json  5KREh9yQX-cXOxNfq5G2o.json  5MfziQ7wyFAVImdzZu03P.json  5cYAdaXni4XwFjbnepzw7.json  (+359 more)
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/assets/: RB_with_Ports_scaled_105x15.dxf
gui/example/: example.csv  example2.csv  example3.csv
gui/redirect/: index.html
gui/src/: App.css  App.tsx  BoardUI.tsx  BoardUI_backup.tsx  index.css
src/: board_router.rs  board_router_old.rs  board_router_wasm.rs  dxf.rs  graph_search.rs  lib.rs  port_nomenclature.rs  stl.rs  utils.rs  validation.rs
(+14744 files in other folders)
