[package]
name = "mmft-board-router"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-utils = "0.2.0"
serde = "1.0.208"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version="0.3.70", features=["console"] }
dxf = "0.5.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
