[package]
name = "mmft-board-router"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-utils = "0.2.0"
indexmap = "2.7.1"
regex = "1.11.1"
serde = "1.0.208"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version="0.3.70", features=["console"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
