[package]
name = "mmft-board-router"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-utils = "0.2.0"
indexmap = "2.7.1"
regex = "1.11.1"
serde = "1.0.208"
serde_json = "1.0.138"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version="0.3.70", features=["console"] }
nanoid = "0.4.0"
rand = "0.9.0"
clap = { version = "4.5.29", features = ["derive"] }
walkdir = "2.5.0"
convert_case = "0.7.1"
statistical = "1.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "generate_benchmark"
path = "benches/generate_benchmark.rs"

[[bin]]
name = "print_benchmark"
path = "benches/print_benchmark.rs"

[[bin]]
name = "compute_group_aggregates"
path = "benches/compute_group_aggregates.rs"

[[bench]]
name = "benchmarks"
harness = false
